package graph;

public enum EdgeType {
    CONTROL,
    FLOW
}
